--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-icons": "^5.3.0",
     "react-router": "^6.27.0",
     "react-router-dom": "^6.27.0",
-    "react-transition-group": "^4.4.5"
+    "react-slick": "^0.30.2",
+    "react-transition-group": "^4.4.5",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
